增加SQLite的压测